--- a/apps/test/Makefile
+++ b/apps/test/Makefile
@@ -6,14 +6,14 @@ LDFLAGS := -m elf_x86_64 -nostdlib -z text -z max-page-size=0x1000 -T linker.ld
 SRC := main.c
 OBJ := $(SRC:.c=.o)
 
-all: test
+all: bin/test
 
-test: $(OBJ)
-	mkdir bin
+bin/test: $(OBJ)
+	mkdir -p bin
 	$(LD) $(LDFLAGS) -o bin/test $(OBJ)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(OBJ) bin
+	rm -rf $(OBJ) bin/test
